samples/_failures_safe/1761221367_8ffc2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f2a21e5.c: In function ‘main’:
./samples/SAFE/__tmp_8f2a21e5.c:153:30: error: ‘MAX_ED’ undeclared (first use in this function); did you mean ‘MAX_EDGES’?
  153 |     if (edges < 0 || edges > MAX_ED
      |                              ^~~~~~
      |                              MAX_EDGES
./samples/SAFE/__tmp_8f2a21e5.c:153:30: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8f2a21e5.c:153:36: error: expected ‘)’ at end of input
  153 |     if (edges < 0 || edges > MAX_ED
      |        ~                           ^
      |                                    )
./samples/SAFE/__tmp_8f2a21e5.c:153:5: error: expected declaration or statement at end of input
  153 |     if (edges < 0 || edges > MAX_ED
      |     ^~
